<resources>
    <string name="app_name">S1</string>
    <string name="button">Button</string>
    <string name="Menu">menu</string>
    <string name="Search">search</string>
    <string name="Profile">profile</string>
    <string name="Notification">notification</string>
    <string name="_30_jan_2024">30 Jan 2024</string>
    <string name="todo">TODO</string>
    <string name="_5">5</string>
    <string name="hello_usman">Hello, Usman!</string>
    <string name="islamabad_pakistan">Islamabad, Pakistan</string>
    <string name="traffic_james">Traffic james</string>
    <string name="something">something</string>
    <string name="challan_payment">Challan Payment</string>
    <string name="traffic_advisory">Traffic Advisory</string>
    <string name="route_planner">Route Planner</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="e_license_registration">E-License Registration</string>
    <string name="cancel_appointments">Cancel Appointments</string>
    <string name="registered_vehicle">Registered Vehicle</string>
    <string name="driving_license_center">Driving License Center</string>
    <string name="traffic_rules">Traffic Rules</string>
    <string name="live_incidents">Live Incidents</string>
    <string name="feedbacks_complaints">Feedbacks/ Complaints</string>
    <string name="challan_no">Challan No</string>
    <string name="paid">paid</string>
    <string name="add_new_challan">Add New Challan</string>
    <string name="e_license_registeration">E-License Registeration</string>
    <string name="get_certificate">Get Certificate</string>
    <string name="apply_learner">Apply Learner</string>
    <string name="enter_cnic">Enter CNIC</string>
    <string name="feedback_or_complaints">Feedback or Complaints</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="ok">OK</string>
    <string name="driving_license">Driving License</string>
    <string name="active">Active</string>
    <string name="license_record">license Record</string>
    <string name="voilation">Voilation</string>
    <string name="details">Details</string>
    <string name="voilation_history">Voilation History</string>
    <string name="let_us_know_if_you_have_any_complaints_or_feedback">Let us know if you have any complaints or feedback ...</string>
    <string name="submit">Submit</string>
    <string name="please_rate_your_experience">Please Rate your Experience</string>
    <string name="learner_permit">Learner Permit</string>
    <string name="license_details">License Details :</string>

</resources>