<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/NB_menu"
        android:contentDescription="@string/Menu"
        android:icon="@drawable/menu"
        android:title=""
        />

    <item
        android:id="@+id/NB_search"
        android:contentDescription="@string/Search"
        android:icon="@drawable/search"
        android:title="" />
    <item
        android:id="@+id/NB_notification"
        android:contentDescription="@string/Notification"
        android:icon="@drawable/notification"
        android:title="" />
    <item
        android:id="@+id/NB_profile"
        android:contentDescription="@string/Profile"
        android:icon="@drawable/profile"
        android:title="" />

</menu>