<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/attribute_challan_payment"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="20dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:backgroundTint="#ffff"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="112dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="76dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/challan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/voilation"
            android:layout_width="137dp"
            android:layout_height="27dp"
            android:layout_marginStart="104dp"
            android:text="@string/voilation"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.352" />

        <TextView
            android:id="@+id/date"
            android:layout_width="120dp"
            android:layout_height="22dp"
            android:layout_marginStart="104dp"
            android:text="@string/_30_jan_2024"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/statustv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voilation"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/statustv"
            style="@style/RoundImage"
            android:layout_width="101dp"
            android:layout_height="35dp"
            android:layout_marginStart="44dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="#D12424"
            android:gravity="center"
            android:text="@string/details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toEndOf="@+id/voilation"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>