<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="148dp"
        app:layout_constraintBaseline_toBottomOf="@id/navigation_bar"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom_nav"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/options" />

    <Button
        android:id="@+id/lic_reg_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/round_arrow_left_24"
        android:drawablePadding="18dp"
        android:text="@string/feedback_or_complaints"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="199dp"
        android:layout_height="162dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/feedback_ppl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lic_reg_btn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="329dp"
        android:layout_height="299dp"
        android:elevation="12dp"
        app:cardCornerRadius="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="35dp"
            android:text="@string/please_rate_your_experience"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/bad"
            android:layout_width="53dp"
            android:layout_height="51dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/bad" />

        <ImageView
            android:id="@+id/sad"
            android:layout_width="53dp"
            android:layout_height="51dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/sad_face" />

        <ImageView
            android:id="@+id/sceptic"
            android:layout_width="53dp"
            android:layout_height="51dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/sceptic" />

        <ImageView
            android:id="@+id/happiness"
            android:layout_width="53dp"
            android:layout_height="51dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/happiness" />

        <ImageView
            android:id="@+id/happiest"
            android:layout_width="53dp"
            android:layout_height="51dp"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/happiest" />

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="299dp"
            android:layout_height="140dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="#D1D1D1"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/let_us_know_if_you_have_any_complaints_or_feedback"
            android:inputType="textMultiLine" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button4"
        android:layout_width="202dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/blue"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>

